--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -4,7 +4,7 @@
 
 <div class="container form-page">
   <%= simple_form_for (@user) do |f| %>
-      <%= f.input :profile %>
+      <%= f.input :profile, as: :text %>
       <%= f.input :photo, as: :file %>
       <%= f.button :submit, "Save changes", class: 'btn btn-primary btn-block'  %>
   <% end %>
