--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -6,6 +6,6 @@
   <%= render './shared/form', project: @project %>
 </div>
 
-<div class="bottom-page">
+<div class="bottom-page text-center">
   <%= link_to 'Back to homepage', root_path, class: 'btn btn-menu' %>
 </div>
