--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,6 +29,7 @@ a {
 .container {
   width: 900px;
   margin: 0 auto;
+  height: fit-content;
 }
 
 .projects-container {
@@ -36,13 +37,15 @@ a {
   margin-right: 40px;
 }
 
-.project-info {
-  display: flex;
-  flex-wrap: wrap;
+.info-details {
   justify-content: space-around;
+}
+
+.info-details.user-details {
+  display: flex;
   .user-info {
     padding: 20px 14px;
-    margin: 12px;
+    margin: 25px;
     width: 300px;
     height: fit-content;
     background-color: #F4F4F4;
@@ -53,16 +56,25 @@ a {
   }
   .user-profile {
     padding: 20px 14px;
-    margin: 12px;
+    margin-top: 12px;
+    margin-bottom: 12px;
+    margin-right: 12px;
+    margin-left: 25px;
     text-align: justify;
     width: 500px;
   }
+}
+
+.info-details.project-details {
   .description {
-    text-align: justify;
-    h3 {
-      text-align: center;
+      text-align: justify;
+      p {
+        margin-bottom: 50px;
+      }
+      h3 {
+        text-align: center;
+      }
     }
-  }
 }
 
 .evolution {
@@ -75,35 +87,41 @@ a {
   border-radius: 4px;
   border: 1px solid #F4F4F4;
   text-align: justify;
+  h3 {
+    text-align: center;
+  }
 }
 
 .applications {
   margin-top: 30px;
   margin-bottom: 30px;
   text-align: center;
+    p {
+      margin-top: 20px;
+    }
   .candidates {
     position: relative;
     justify-content: center;
     display: flex;
     flex-wrap: wrap;
   }
-  .photo-placeholder {
+  .avatar-user {
     position: absolute;
     right: 50px;
-    top: 30px;
+    top: 12px;
     width: 70px;
     justify-content: center;
-    img {
-      border-radius: 50%;
-      border: 3px solid white;
-    }
   }
   .candidate-choice {
+    display: flex;
     position: relative;
-    text-align: center;
-    img {
-      border-radius: 50%;
-      border: 3px solid white;
-    }
+    margin: 10px auto;
+    justify-content: space-around;
+    bottom: 0;
   }
 }
+
+
+
+
+
