--- a/app/views/shared/_form.html.erb
+++ b/app/views/shared/_form.html.erb
@@ -3,5 +3,5 @@
   <%= f.input :catchphrase, placeholder: "What's your catchphrase ?" %>
   <%= f.input :description, as: :text, placeholder: "PITCH YOUR PROJET to scurious minds here! Explain the pain, target and solution." %>
   <%= f.input :evolution, as: :text, placeholder: "Fill this field ONLY if your project has already started."%>
-  <%= f.button :submit, class: 'btn btn-primary' %>
+  <%= f.button :submit %>
 <% end %>
