--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -24,12 +24,14 @@
                 input_html: { autocomplete: "current-password" } %>
   </div>
 
-    <%= f.button :submit, "Update password", class: 'btn btn-outline-success' %>
+  <div class="form-actions text-center">
+    <%= f.button :submit, "Update password"  %>
+  </div>
 
 <% end %>
 
-<div class="bottom-page">
-<%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'btn btn-menu'%></p>
+<div class="bottom-page text-center">
+<%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'btn btn-menu', style:"margin-top: 30px;"%></p>
 </div>
 <div class="bottom-page text-center">
   <%= link_to 'Back to homepage', root_path, class: 'btn btn-menu' %>
