--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -27,8 +27,8 @@
     <%= f.input :photo, as: :file %>
   </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" , class: "btn btn-primary btn-block"  %>
+  <div class="form-actions text-center">
+    <%= f.button :submit, "Sign up"  %>
   </div>
 <% end %>
 <hr>
