--- a/app/views/shared/_form.html.erb
+++ b/app/views/shared/_form.html.erb
@@ -3,5 +3,8 @@
   <%= f.input :catchphrase, placeholder: "What's your catchphrase ?" %>
   <%= f.input :description, as: :text, placeholder: "PITCH YOUR PROJET to scurious minds here! Explain the pain, target and solution." %>
   <%= f.input :evolution, as: :text, placeholder: "Fill this field ONLY if your project has already started."%>
-  <%= f.button :submit %>
+
+  <div class="form-actions text-center">
+    <%= f.button :submit %>
+  </div>
 <% end %>
