--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -6,7 +6,10 @@
   <%= simple_form_for (@user) do |f| %>
       <%= f.input :profile %>
       <%= f.input :photo, as: :file %>
-      <%= f.button :submit, "Save changes", class: 'btn btn-outline-success' %>
+
+  <div class="form-actions text-center">
+    <%= f.button :submit, "Save changes" %>
+  </div>
   <% end %>
 </div>
 
