--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,9 +1,7 @@
 <div class="footer">
   <div class="links">
-    <a href="#"><i class="fab fa-fw fa-facebook-f"></i></a>
-    <a href="#"><i class="fab fa-fw fa-github"></i></a>
-    <a href="#"><i class="fab fa-fw fa-twitter"></i></a>
-    <a href="#"><i class="fab fa-fw fa-instagram"></i></a>
-    <p>This website was created with passion  🐿 </p>
+    <a href="https://github.com/AbdulmelikSAK" target="_blank"><i class="fab fa-fw fa-github"></i></a>
+    <a href="https://www.instagram.com/squirrel_igrito/" target="_blank"><i class="fab fa-fw fa-instagram"></i></a>
+    <p>This website was created with deep passion for squirrels 🐿 </p>
   </div>
 </div>
